<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="header_category_wireless_networks">Wireless &amp; networks</string>
    <string name="header_category_device">Device</string>
    <string name="header_category_system">System</string>
    <string name="cancel">Cancel</string>
    <string name="bluetooth_dock_settings_remember">Remember settings</string>
    <string name="home_settings">Home</string>
    <string name="sound_settings">Sound</string>
    <string name="display_settings">Display</string>
    <string name="storage_settings">Storage</string>
    <string name="storage_usb_settings">Storage &amp; USB</string>
    <string name="storage_menu_rename">Rename</string>
    <string name="storage_menu_mount">Mount</string>
    <string name="storage_menu_unmount">Eject</string>
    <string name="storage_menu_format">Format</string>
    <string name="storage_menu_migrate">Migrate data</string>
    <string name="storage_menu_forget">Forget</string>
    <string name="storage_internal_title">Device storage</string>
    <string name="storage_external_title">Portable storage</string>
    <string name="storage_wizard_init_external_title">Use as portable storage</string>
    <string name="storage_wizard_init_external_summary">For moving photos and other media between devices.</string>
    <string name="storage_wizard_init_internal_title">Use as internal storage</string>
    <string name="storage_wizard_init_internal_summary">For storing anything on this device only, including apps and photos. Requires formatting that prevents it from working with other devices.</string>
    <string name="storage_wizard_migrate_now">Move now</string>
    <string name="storage_wizard_migrate_later">Move later</string>
    <string name="reset_network_desc">This will reset all network settings, including:\n\n<li>Wi\u2011Fi</li>\n<li>Cellular data</li>\n<li>Bluetooth</li>"</string>
    <string name="reset_network_button_text">Reset settings</string>
    <string name="reset_network_final_desc">Reset all network settings? You can\u2019t undo this action!</string>
    <string name="reset_network_final_button_text">Reset settings</string>
    <string name="sms_application_title" translatable="true">SMS app</string>
    <string name="settings_safetylegal_activity_loading">Loading\u2026</string>
    <string name="manageapplications_settings_title">Manage apps</string>
    <string name="manageapplications_settings_summary">Manage and remove installed apps</string>
    <string name="applications_settings">Apps</string>
    <string name="applications_settings_summary">Manage apps, set up quick launch shortcuts</string>
    <string name="advanced_settings">Advanced settings</string>
    <string name="advanced_settings_summary">Enable more settings options</string>
    <string name="application_info_label">App info</string>
    <string name="storage_label">Storage</string>
    <string name="permissions_label">Permissions</string>
    <string name="cache_size_label">Cache:&#160;</string>
    <string name="total_size_label">Total:&#160;</string>
    <string name="application_size_label">App:&#160;</string>
    <string name="external_code_size_label">USB storage app</string>
    <string name="data_size_label">Data:&#160;</string>
    <string name="external_data_size_label" product="default">SD card</string>
    <string name="clear_activities">Clear defaults</string>
    <string name="sort_order_alpha">Sort by name</string>
    <string name="sort_order_size">Sort by size</string>
    <string name="default_emergency_app">Emergency app</string>
    <string name="reset_app_preferences">Reset app preferences</string>
    <string name="no_applications">No apps.</string>
    <string name="security_settings_desc">Allow this app to:</string>
    <string name="security_settings_billing_desc">This app may charge you money:</string>
    <string name="security_settings_premium_sms_desc">Send premium SMS</string>
    <string name="app_install_location_title">Preferred install location</string>
    <string name="app_install_location_summary">Change the preferred installation location for new apps</string>
    <string name="no_default_apps">No default Apps.</string>
    <string name="storageuse_settings_title">Storage use</string>
    <string name="storageuse_settings_summary">View storage used by apps</string>
    <string name="runningservices_settings_title">Running services</string>
    <string name="runningservices_settings_summary">View and control currently running services</string>
    <string name="no_running_services">Nothing running.</string>
    <string name="running_processes_header_title">Device memory</string>
    <string name="running_processes_header_footer">App RAM usage</string>
    <string name="running_processes_header_system_prefix">System</string>
    <string name="running_processes_header_apps_prefix">Apps</string>
    <string name="running_processes_header_free_prefix">Free</string>
    <string name="display_order_text">Sort by:</string>
    <string name="app_name_label">App</string>
    <string name="last_time_used_label">Last time used</string>
    <string name="usage_time_label">Usage time</string>
    <string name="settings_button">Settings</string>
    <string name="power_usage_summary_title">Battery</string>
    <string name="power_usage_list_summary">Use since last full charge</string>
    <string name="details_subtitle">Use details</string>
    <string name="controls_subtitle">Adjust power use</string>
    <string name="packages_subtitle">Included packages</string>
    <string name="battery_saver">Battery saver</string>
    <string name="battery_saver_turn_on_automatically_title">Turn on automatically</string>
    <string name="app_memory_use">Memory use</string>
    <string name="mem_state_subtitle">Memory states</string>
    <string name="mem_use_subtitle">Memory use</string>
    <string name="menu_show_system">Show system</string>
    <string name="menu_hide_system">Hide system</string>
    <string name="emergency_tone_title">Emergency tone</string>
    <string name="data_usage_summary_title">Data usage</string>
    <string name="data_usage_menu_restrict_background">Restrict background data</string>
    <string name="data_usage_menu_show_wifi">Show Wi\u2011Fi</string>
    <string name="data_usage_menu_show_ethernet">Show Ethernet usage</string>
    <string name="data_usage_menu_metered">Network restrictions</string>
    <string name="data_usage_menu_sim_cards">SIM cards</string>
    <string name="data_usage_menu_cellular_networks">Cellular networks</string>
    <string name="data_usage_empty">No apps used data during this period.</string>
    <string name="data_usage_label_foreground">Foreground</string>
    <string name="data_usage_label_background">Background</string>
    <string name="data_usage_app_settings">App settings</string>
    <string name="data_usage_cycle_editor_subtitle">Date of each month:</string>
    <string name="data_usage_sweep_warning"><font size="21"><xliff:g id="number" example="128">^1</xliff:g></font> <font size="9"><xliff:g id="unit" example="KB">^2</xliff:g></font>\n<font size="12">warning</font></string>
    <string name="data_usage_sweep_limit"><font size="21"><xliff:g id="number" example="128">^1</xliff:g></font> <font size="9"><xliff:g id="unit" example="KB">^2</xliff:g></font>\n<font size="12">limit</font></string>
    <string name="data_usage_metered_body">Metered networks are treated like cellular when background data is restricted. Apps may warn before using these networks for large downloads.</string>
    <string name="data_usage_metered_mobile">Cellular networks</string>
    <string name="data_usage_metered_wifi">Metered Wi\u2011Fi networks</string>
    <string name="data_usage_metered_wifi_disabled">To select metered networks, turn Wi\u2011Fi on.</string>
    <string name="data_usage_disclaimer">Carrier data accounting may differ from your device.</string>
    <string name="home_app_uninstall_button">Uninstall this application</string>
    <string name="help_label">Help &amp; feedback</string>
    <string name="wizard_next">Next</string>
    <string name="sim_settings_title">SIM cards</string>
    <string name="keywords_more_default_sms_app">text message texting messages messaging</string>
    <string name="keywords_storage">space disk hard drive device usage</string>
    <string name="keywords_battery">power usage charge</string>
    <string name="keywords_sounds_and_notifications">speaker beep</string>
    <string name="keywords_sounds_and_notifications_interruptions">dont don\u2019t disturb interrupt interruption break</string>
    <string name="keywords_emergency_app">emergency ice app default</string>
    <string name="keywords_default_phone_app">phone dialer default</string>
    <string name="keywords_app_permissions">apps permissions security</string>
    <string name="keywords_default_apps">apps default</string>
    <string name="keywords_ignore_optimizations">ignore optimizations doze app standby</string>
    <string name="notification_settings">Sound &amp; notification</string>
    <string name="media_volume_option_title">Media volume</string>
    <string name="alarm_volume_option_title">Alarm volume</string>
    <string name="ring_volume_option_title">Ring volume</string>
    <string name="notification_volume_option_title">Notification volume</string>
    <string name="notification_section_header">Notification</string>
    <string name="advanced_section_header">Advanced</string>
    <string name="notification_pulse_title">Pulse notification light</string>
    <string name="app_notifications_title">App notifications</string>
    <string name="manage_notification_access_title">Notification access</string>
    <string name="manage_zen_access_title">Do Not Disturb access</string>
    <string name="launch_by_default">Open by default</string>
    <string name="notifications_label">Notifications</string>
    <string name="default_apps_title">Default Apps</string>
    <string name="default_browser_title">Browser app</string>
    <string name="default_phone_title">Phone app</string>
    <string name="memory_settings_title">Memory</string>
    <string name="notification_management">Notification management</string>
    <string name="default_launcher_title">Launcher</string>
    <string name="default_camera_title">Camera</string>
    <string name="default_gallery_title">Gallery</string>
    <string name="default_music_title">Music</string>
    <string name="default_video_title">Video</string>
    <string name="default_text_title">Text</string>
    <string name="default_mail_title">Mail</string>
    <string name="current_input_method">Current Keyboard</string>
	<string name="rescan" >"rescan"</string>
	<string name="one_key_optimization" >"optimization"</string>
    <string name="third_part_app">Personal</string>
    <string name="system_app">System</string>
    <string name="system_component">Component</string>
    <string name="running_app">Running</string>
    <string name="scan_complete" >"Scan complete"</string>
    <string name="pref_title_notification" >"Notification"</string>
    <string name="receive_notification" >"&#160;&#160;receive notification"</string>
    <string name="pref_title_data" >"Data usage"</string>
    <string name="data_switch_toggle" >"&#160;&#160;mobile data"</string>
    <string name="app_detail_data_title_total" >"All:"</string>
    <string name="app_detail_data_title_wifi_total" >"WIFI:"</string>
    <string name="pref_title_resource" >"Resource usage"</string>
    <string name="pref_title_auth" >"Privilege usage"</string>
    <string name="pref_title_others" >"Others"</string>
    <string name="app_detail_overlay_window" >"overlay window"</string>
    <string name="app_detail_shortcut" >"shortcut created"</string>
    <string name="app_detail_default_app" >"default opened"</string>
    <string name="default_contact_title" >Contact app</string>
</resources>