<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2015 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:settings="http://schemas.android.com/apk/res/com.monster.appmanager"
        android:key="default_apps">

    <com.monster.appmanager.applications.DefaultAppPreferenceBase
            android:key="default_launcher_app"
            android:title="@string/default_launcher_title"
            />
    
    <com.monster.appmanager.applications.DefaultAppPreferenceBase
            android:key="default_contact_app"
            android:title="@string/default_contact_title"
            />

    <com.monster.appmanager.applications.DefaultPhonePreference
            android:key="default_phone_app"
            android:title="@string/default_phone_title"
            settings:keywords="@string/keywords_default_phone_app"
            />

    <com.monster.appmanager.applications.DefaultSmsPreference
            android:key="default_sms_app"
            android:title="@string/sms_application_title"
            settings:keywords="@string/keywords_more_default_sms_app"
            />

    <com.monster.appmanager.applications.DefaultAppPreferenceBase
            android:key="default_camera_app"
            android:title="@string/default_camera_title"
            />

    <com.monster.appmanager.applications.DefaultAppPreferenceBase
            android:key="default_gallery_app"
            android:title="@string/default_gallery_title"
            />

    <com.monster.appmanager.applications.DefaultAppPreferenceBase
            android:key="default_music_app"
            android:title="@string/default_music_title"
            />
    
    <com.monster.appmanager.applications.DefaultAppPreferenceBase
            android:key="default_video_app"
            android:title="@string/default_video_title"
            />
    
    <com.monster.appmanager.applications.DefaultAppPreferenceBase
            android:key="default_text_app"
            android:title="@string/default_text_title"
            />
    <com.monster.appmanager.applications.DefaultAppPreferenceBase
            android:key="default_mail_app"
            android:title="@string/default_mail_title"
            />

    <com.monster.appmanager.applications.DefaultBrowserPreference
            android:key="default_browser"
            android:title="@string/default_browser_title"
            />
    
    <com.monster.appmanager.applications.DefaultImePreference
            android:key="default_ime"
            android:title="@string/current_input_method"
            />
    
	<com.monster.appmanager.applications.SpacePreference
        android:layout_height="20dp" />
    
</PreferenceScreen>
