<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2014 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:settings="http://schemas.android.com/apk/res/com.monster.appmanager"
        android:title="@string/notification_management"
        android:key="notification_settings"
        settings:keywords="@string/notification_management">

    <PreferenceCategory
        android:key="notification"
        android:title="@string/notification_section_header" >

        <!-- Pulse notification light -->
        <SwitchPreference
                android:key="notification_pulse"
                android:title="@string/notification_pulse_title"
                android:persistent="false" />

        <!-- App notifications -->
        <PreferenceScreen
                android:key="app_notifications"
                android:title="@string/app_notifications_title"
                android:fragment="com.monster.appmanager.applications.ManageApplications">
                <extra
                    android:name="classname"
                    android:value="com.monster.appmanager.Settings$NotificationAppListActivity" />
        </PreferenceScreen>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="advanced"
        android:title="@string/advanced_section_header" >

        <!-- Notification access -->
        <Preference
                android:key="manage_notification_access"
                android:title="@string/manage_notification_access_title"
                android:persistent="false"
                android:fragment="com.monster.appmanager.notification.NotificationAccessSettings" />

        <!-- Do Not Disturb access -->
        <Preference
                android:key="manage_zen_access"
                android:title="@string/manage_zen_access_title"
                android:persistent="false"
                android:fragment="com.monster.appmanager.notification.ZenAccessSettings" />

    </PreferenceCategory>

</PreferenceScreen>
