<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fullscreen_content_controls"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:ignore="UselessParent" >
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
	    <ImageView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="54dp"
	        android:layout_gravity="center_horizontal"
	        android:src="@drawable/ad_serach_complete" />
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:layout_marginTop="14dp"
	        android:layout_marginBottom="34dp"
	        android:text="@string/scan_complete"
	        android:textColor="@color/optimize_result"
	        android:textSize="18sp" />
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingLeft="5dp"
        android:orientation="vertical"
        android:layout_weight="1" >
	    <include android:id="@+id/permissions" layout="@layout/list_item_2_line_multiple_choice_with_icon" />
	    <include android:id="@+id/advertisement" layout="@layout/list_item_2_line_multiple_choice_with_icon" />
	    <include android:id="@+id/suspension_window" layout="@layout/list_item_2_line_multiple_choice_with_icon" />
	    <include android:id="@+id/add_shortcut" layout="@layout/list_item_2_line_multiple_choice_with_icon" />
	    <Space
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:layout_weight="1" />
    </LinearLayout>

<!--      <View 
            android:layout_width="match_parent"
            android:layout_height="1px"
	        android:background="@color/line_color" />        -->
        
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:paddingBottom="20dip"
        android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
        android:paddingStart="?android:attr/listPreferredItemPaddingStart"
        android:paddingTop="10dip" >

        <Button
            android:id="@+id/rescan"
            style="@style/ButtonStyle.MatchWidth"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/rescan" />
        
        <View
            android:layout_width="10dp"
            android:layout_height="0dp"
            android:visibility="invisible" />

        <Button
            android:id="@+id/one_key_optimization"
            style="@style/ButtonStyle.MatchWidth"
            android:background="@drawable/one_key_optimization_bg"
            android:textColor="@color/hightlight_btn_font_color"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/one_key_optimization" />
    </LinearLayout>

</LinearLayout>